--- a/jbrain.html
+++ b/jbrain.html
@@ -27,12 +27,16 @@
                         FAQ</a>.</div>
                 <div class="content">
                     <div class="model">
-                        <div class="title-left">Apply with</div>
-                        <div class="model-right">
+                        <div class="title-left applyP">Apply with</div>
+                        <div class="model-right ">
                             <div class="content-right">
-                                <span class="custom-underline">University email address</span>
+                                <span class="custom-underline">Official document</span>
                             </div>
-
+                            <div class="content-right ">
+                                Your application and official documents will be reviewed by a real person.This may take
+                                up to two weeks to process.
+                                To get a free license immediately, consider choosing another application method.
+                            </div>
                         </div>
                     </div>
                     <div class="model">
@@ -91,21 +95,69 @@
                     </div>
                     <div class="model">
                         <div class=" country">Country / region</div>
-                        <div class="model-right">
+                        <div class="content-right">
                             <input type="text" class="input-info magrinadd" name="conntry" placeholder="Conntry">
+                        </div>
+                    </div>
+                    <div class="model">
+                        <div class=" country">Date of birth</div>
+                        <div class="content-right">
+                            <input type="date" class="input-info magrinadd" name="conntry">
+                        </div>
+                    </div>
+                    <div class="model">
+                        <div class=" country">Name of your academic institution</div>
+                        <div class="content-right">
+                            <input type="text" class="input-info magrinadd" name="conntry">
+                        </div>
+                    </div>
+                    <div class="model">
+                        <div class=" country wai">Website of your academic institution</div>
+                        <div class="content-right">
+                            <input type="text" class="input-info magrinadd" name="conntry"
+                                placeholder="https://myschool.edu">
+                            <div class="checkbox">
+                                <input type="checkbox" id="checkbox1" name="checkbox1">
+                                <label for="checkbox1"> My educational institution provides high or higher education
+                                    and issues state-accredited diplomas</label><br>
+                            </div>
+                            <div class="checkbox">
+                                <input type="checkbox" id="checkbox2" name="checkbox2">
+                                <label for="checkbox2"> The educational program that I am enrolled in takes one or
+                                    more years of full-time study to complete</label><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="model">
+                        <div class=" country od">Official document</div>
+                        <div class="content-right">
+                            <div class="od-inpfile">
+                                <label for="fileInput1" class="custom-file-upload">Choose Files</label>
+                                <input type="file" name="files[]" id="fileInput1" multiple>
+                            </div>
+                            <div class="od-text">Add any official document(s) (e.g. student card) certifying your
+                                affiliation with your academic institution or provide a link where such information can
+                                be found:</div>
+                            <input type="text" class="input-info magrinadd" name="conntry">
+                        </div>
+                    </div>
+                    <div class="model">
+                        <div class="comment">Comment (optional)</div>
+                        <div class="model-right">
+                            <input type="text" class="input-info magrinadd" name="conntry" placeholder="">
                             <div class="checkbox">
                                 <input type="checkbox" id="checkbox1" name="checkbox1">
                                 <label for="checkbox1"> I am under 13 years old</label><br>
                             </div>
                             <div class="checkbox">
                                 <input type="checkbox" id="checkbox2" name="checkbox2">
-                                <label for="checkbox2"> I have read and I accept the <a href="#">JetBrains Account
+                                <label for="checkbox2"> I have read and I accept the <a href="#">JetSoftware Account
                                         Agreement</a></label><br>
                             </div>
                             <div class="checkbox">
                                 <input type="checkbox" id="checkbox3" name="checkbox3">
-                                <label for="checkbox3"> I'd like to receive information about JetBrains products and
-                                    JetBrains Academy, including invitations to related research</label><br>
+                                <label for="checkbox3"> I'd like to receive information about JetSoftware products and
+                                    JetSoftware Academy, including invitations to related research</label><br>
                             </div>
                             <div class="noteend">
                                 By submitting this form, I acknowledge that the personal data I filled in will be
@@ -113,8 +165,9 @@
                                 for the purposes explained above and in accordance with the settings I selected. I can
                                 manage my consent preferences in <a href="#">my profile</a>, or use an unsubscribe link
                                 in
-                                each e-mail. Personal data will be processed by JetBrains s.r.o., in accordance with the
-                                <a href="#">JetBrains Privacy Policy</a>, and may engage <a href="#">third parties</a>
+                                each e-mail. Personal data will be processed by JetSoftware s.r.o., in accordance with
+                                the
+                                <a href="#">JetSoftware Privacy Policy</a>, and may engage <a href="#">third parties</a>
                                 in
                                 such processing.
                             </div>
@@ -125,7 +178,7 @@
                     </div>
                 </div>
                 <div class="footer">
-                    Copyright © 2000-2024 JetBrains s.r.o. | Help | Support | JetBrains Privacy Policy | JetBrains
+                    Copyright © 2000-2024 JetSoftware s.r.o. | Help | Support | JetSoftware Privacy Policy | JetSoftware
                     Account
                     Agreement | Build #2024.04-3435
                 </div>
