--- a/jbrain.html
+++ b/jbrain.html
@@ -32,11 +32,14 @@
                             <div class="content-right">
                                 <span class="custom-underline">Official document</span>
                             </div>
-                            <div class="content-right ">
+                            <div class="content-right ap_text">
                                 Your application and official documents will be reviewed by a real person.This may take
                                 up to two weeks to process.
-                                To get a free license immediately, consider choosing another application method.
+
                             </div>
+                            <div class="content-right ap_text_2">To get a free license immediately, consider choosing
+                                another
+                                application method.</div>
                         </div>
                     </div>
                     <div class="model">
@@ -94,25 +97,25 @@
                         </div>
                     </div>
                     <div class="model">
-                        <div class=" country">Country / region</div>
+                        <div class=" country mtop">Country / region</div>
                         <div class="content-right">
                             <input type="text" class="input-info magrinadd" name="conntry" placeholder="Conntry">
                         </div>
                     </div>
                     <div class="model">
-                        <div class=" country">Date of birth</div>
+                        <div class=" country mtop">Date of birth</div>
                         <div class="content-right">
                             <input type="date" class="input-info magrinadd" name="conntry">
                         </div>
                     </div>
                     <div class="model">
-                        <div class=" country">Name of your academic institution</div>
+                        <div class=" country mtop noe">Name of your academic institution</div>
                         <div class="content-right">
                             <input type="text" class="input-info magrinadd" name="conntry">
                         </div>
                     </div>
                     <div class="model">
-                        <div class=" country wai">Website of your academic institution</div>
+                        <div class=" country wai mtop">Website of your academic institution</div>
                         <div class="content-right">
                             <input type="text" class="input-info magrinadd" name="conntry"
                                 placeholder="https://myschool.edu">
@@ -129,7 +132,7 @@
                         </div>
                     </div>
                     <div class="model">
-                        <div class=" country od">Official document</div>
+                        <div class=" country od mtop">Official document</div>
                         <div class="content-right">
                             <div class="od-inpfile">
                                 <label for="fileInput1" class="custom-file-upload">Choose Files</label>
@@ -142,7 +145,7 @@
                         </div>
                     </div>
                     <div class="model">
-                        <div class="comment">Comment (optional)</div>
+                        <div class="comment mtop">Comment (optional)</div>
                         <div class="model-right">
                             <input type="text" class="input-info magrinadd" name="conntry" placeholder="">
                             <div class="checkbox">
